# sealbridge-bootstrap

./: .gitleaks.baseline  .gitleaks.toml  .gitleaksignore  README.md  clean_bootstrap_releases.py
.github/workflows/: ci-linux.yml  ci-windows.yml  ci.yml  release-only.yml  release.yml  security-scan.yml
scripts/: validate_e2e.py
sealbridge-bootstrap/: .editorconfig  .gitignore  LICENSE  README.md  bootstrap.ps1  bootstrap.sh
sealbridge-bootstrap/.github/workflows/: ci.yml  release.yml
sealbridge-bootstrap/assets/: README.md
sealbridge-bootstrap/configs/: bootstrap.yaml.example  policy.yaml.example
sealbridge-bootstrap/payload/: age_key.enc  bootstrap_identity.enc  pyproject.toml
sealbridge-bootstrap/payload/src/sbboot/: __init__.py  agent.py  agewrap.py  chezmoi.py  cli.py  config.py  errors.py  gdrive.py  gitwrap.py  logging.py  otp.py  paths.py  policy.py  sealrepos.py  secrets.py  security.py  util.py
sealbridge-bootstrap/payload/tests/e2e/: Dockerfile.ubuntu  create_encrypted_key.py  mock_otp_server.py  setup_e2e_env.sh  setup_git_repo.sh  test_bootstrap_flow.py  test_bootstrap_flow_windows.py  test_bootstrap_script.sh  test_full_system.py
sealbridge-bootstrap/payload/tests/unit/: test_agent.py  test_agewrap.py  test_chezmoi.py  test_config.py  test_otp.py  test_policy.py
sealbridge-repos/: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sealbridge-repos/.github/workflows/: ci.yml  security.yml
sealbridge-repos/configs/: gitattributes.gitcrypt  policy.yaml.example  pr_template.md
sealbridge-repos/scripts/: add_gpg_user.sh  init_relay_gitcrypt.sh  install.ps1  install.sh
sealbridge-repos/src/sealrepos/: __init__.py  bridge.py  cli.py  config.py  daemon.py  gitwrap.py  policy.py  pr.py  repoops.py  scan.py
sealbridge-repos/src/sealrepos/cryptmode/: __init__.py  gitcrypt.py  sopsage.py
sealbridge-repos/src/sealrepos/util/: __init__.py  errors.py  fs.py  log.py  paths.py  retry.py  shell.py
sealbridge-repos/system/linux/: sealbridge-bridge.service  sealbridge-bridge.timer  sealreposd.service  sealreposd.timer
sealbridge-repos/system/windows/autostart/: sealbridge-bridge.cmd  sealreposd.cmd
sealbridge-repos/system/windows/watchdog/: sealbridge_bridge_watch.py  sealreposd_watch.py
sealbridge-repos/tests/e2e/: Dockerfile.ubuntu  scenario_bidirectional_rebase.py  scenario_path_policy.py  scenario_plain_to_sealed.py
sealbridge-repos/tests/e2e/fixtures/: gpg_test_keygen.sh  make_personal_repo.sh  make_relay_repo.sh
sealbridge-repos/tests/unit/: test_config.py  test_fs.py  test_gitcrypt.py  test_gitwrap.py  test_policy.py  test_repoops.py  test_scan.py
